# SecondBrain

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
src/: app_state.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs  ticket_routes.rs
src/application/: mod.rs  ticket_service.rs
src/domain/: mod.rs  ticket.rs
src/models/: mod.rs  ticket.rs
src/repositories/: mod.rs  tickets.rs
src/routes/: mod.rs  tickets.rs
tests/: test_ticket_repository.rs
