[package]
name = "second-brain"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = "3.0.5"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors", "compression-gzip", "timeout", "trace", "fs", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
mockall = "0.14.0"
surrealdb = { version = "3.0.5", features = ["kv-mem"] }
