[package]
name = "second-brain"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["chrono", "env-filter", "json"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "compression-gzip", "timeout", "trace", "fs", "limit"] }
